tests/errors/surf_name_01.experr
name 'total' is not defined
